network-policy/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    name: mysql
spec:
  containers:
  - name: mysql
    image: mysql
    ports:
      - containerPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    name: mysql
  ports:
  - port: 3306
    targetPort: 3306
